# knowledge

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  bootstrap_agentic_workspace.sh  compose.prod.yml  compose.yml  executors.toml  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: slice-executor-high.md  slice-executor-low.md  slice-executor-mid.md  slice-executor.md
.codex/: config.toml
.codex/agents/: slice-executor-high.toml  slice-executor-low.toml  slice-executor-mid.toml  slice-executor.toml
.github/workflows/: deploy-production.yml  pages.yml  plugin-ci.yml
alembic/: env.py
alembic/versions/: 0001_accounts_tenancy.py  0002_usage_events.py  0003_org_level_credentials.py  0004_project_visibility.py
cli/: README.md  pyproject.toml
cli/src/knowledge_cli/: __init__.py  auth.py  client.py  config.py  errors.py  guide.py  knowledge.py  main.py
cli/tests/: test_auth.py  test_config.py  test_guide.py  test_knowledge.py
deploy/: README.md  SECRETS.md  deploy.sh  github-actions-production-deploy.sh  knowledge.conf  knowledge.hi2vi.com.conf  oracle-production-deploy-remote.sh
docs/: README.md  index.json  index.md
docs/bootstrap_agentic_workspace.sh/: 2026-07-02-how-explain-saves-documents-now-the-p6-api-rewire-explained.md  2026-07-22-auto-explain-phase-review.html  index.md
docs/changple5/: 2026-07-07-measure-first-then-cache-the-p39-performance-phase-explained-for-beginners.md  2026-07-07-the-daily-ingestion-job-that-kept-getting-stuck-explained-for-beginners.md  2026-07-07-the-p35-agent-refactor-explained-for-beginners.md  2026-07-07-the-prompt-injection-defense-p26-explained-for-beginners.md  index.md
docs/current/: api.md  architecture.md  backend.md  data.md  decisions.md  operations.md
docs/hi2vi/: 2026-07-14-the-hi2vi-research-space.md  2026-07-15-hybrid-ranking-in-vector-search-algorithms-architectures-and-optimizations.md  2026-07-15-optimizing-entity-extraction-and-resolution-in-graphrag-pipelines-using-dspy-pro.md  2026-07-15-p9-s5-freshness-probe.md  2026-07-16-implementing-microsoft-s-graphrag-approach-for-global-context-reasoning-in-enterprise-knowledge-bases.md  2026-07-17-implementing-anthropic-s-contextual-retrieval-pattern-with-prompt-caching.md  index.md  (+2 more)
docs/hi2vi_web/: 2026-07-02-shared-nginx-explained.md  index.md
mcp-server/: .dockerignore  CONTRACT.md  Dockerfile  README.md  pyproject.toml
mcp-server/scripts/: e2e_smoke.py
mcp-server/src/knowledge_mcp/: __init__.py  config.py  main.py  server.py  upstream.py
mcp-server/tests/: test_host_allowlist.py  test_search_tool.py
plugin/: README.md
scripts/: cli_smoke.py  graph_hook.py  onboarding_smoke.py  plugin_parity.py  site_smoke.py  skills_parity.py  workflow.py
server/: api_auth.py  app_api.py  auth_api.py  config.py  dashboard_api.py  db.py  documents.py  documents_api.py  gitops.py  graph_api.py  main.py  reindex.py  search.py  seed.py
tests/: conftest.py  test_api_push.py  test_api_read.py  test_api_write.py  test_dashboard_api.py  test_documents.py  test_documents_api.py  test_graph_api.py  test_html_documents.py  test_public_read.py  test_reindex.py
web/: .dockerignore  .env.example  .prettierignore  Dockerfile  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
works/: .workspace-version.json  backlog.md  deferred.md  events.jsonl  index.json  state.json
(+1005 files in other folders)
